--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 .welcome {
-    background-color: cadetblue;
-    border: 2px solid black;
+    background-color: #a0c4c6;
+    border: 2px solid #b4bcc4;
 }
 
 .userCard {
