--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,15 @@
     border: 2px solid #b4bcc4;
 }
 
+.navLink {
+    width: max-content;
+    padding: 5px 8px;
+    border-radius: 10px;
+    background-color: #d0d0d0;
+    border: 2px solid black;
+    color: black;
+}
+
 .userCard {
     display: flex;
     flex-direction: row;
