--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,24 @@
     color: black;
 }
 
+.githubUserLinkContainer {
+    display: flex;
+    gap: 10px;
+    margin: 10px 0;
+    padding: 0 0 0 10px;
+    border: 1px solid black;
+    width: fit-content;
+    border-radius: 3px;
+}
+
+.githubUserLinkContainer a {
+    text-decoration: none;
+}
+.githubUserLink {
+    color: rgb(19, 19, 19);
+    font-family: sans-serif;
+}
+
 .userCard {
     display: flex;
     flex-direction: row;
